[tool.poetry]
name = "queen-api"
version = "0.1.0"
description = ""
authors = ["Max Vieweg <maximilian.manfred.vieweg@rwth-aachen.de>"]


[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.0.2"
uvicorn = "^0.17.5"
fire = "^0.4.0"
python-dotenv = "^0.19.2"
strawberry-graphql = "^0.99.1"
starlette = "^0.18.0"
pydantic = "^1.9.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-type-checking = "^1.3.2"


[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
type-checking-pydantic-enabled = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
